--- a/app/views/welcome/_aside_text.html.erb
+++ b/app/views/welcome/_aside_text.html.erb
@@ -1,15 +1,15 @@
 <section>
   <h3>Program Highlights</h3>
-  <%= raw Snippet[:highlights] %>
+  <%= raw Snippets::TextSnippet[:program_highlights] %>
 </section>
 
 <section>
   <h3>Eligibility Requirements</h3>
-  <%= raw Snippet[:eligibility_requirements] %>
+  <%= raw Snippets::TextSnippet[:eligibility_requirements] %>
 </section>
 
 <section>
   <h3>Application Information</h3>
-  <%= raw Snippet[:application_information] %>
+  <%= raw Snippets::TextSnippet[:application_information] %>
 </section>
 
