--- a/app/views/reu_program/applicants/show.haml
+++ b/app/views/reu_program/applicants/show.haml
@@ -1,6 +1,8 @@
 .row
   .col-2
   .col-8
+    %button.btn.btn-outline-success=link_to'Accept Applicant', accept_reu_program_applicant_path, method: :patch
+    %button.btn.btn-outline-danger=link_to 'Reject Applicant', reject_reu_program_applicant_path, method: :patch
     - @applicant.data.each do |key, value|
       - if key.match(/_/)
         %h3 #{key.split('_').map(&:capitalize).join(' ')}
