fix js imports and grant defaults setup

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -40,4 +40,4 @@
     #back-top
       %a(href="#header")
         %i.fa.fa-arrow-up
-    %script(src="https://js.stripe.com/v3/")
+    -# %script(src="https://js.stripe.com/v3/")
