--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,9 +1,20 @@
 = render "layouts/navbar"
 
-- if settings_filled_in?
-  %header.container
-    .header-inner.main-header
-      %h1{ :id => "header_link_1" }
-        #{link_to(Setting[:university], Setting[:university_url])}, #{link_to(Setting[:department], Setting[:department_url])}
-      %h2{ :id => "header_link_2" }
-        = link_to("#{Setting[:app_title]} (#{Setting[:program_start_date]} - #{Setting[:program_end_date]})", Setting[:program_url])
+%header.container
+  .header-inner.main-header
+    %h1#header_link_1
+      :ruby
+        university = Setting[:university].present? ? Setting[:university] : 'University Name'
+        university_url = Setting[:university_url].present? ? Setting[:university_url] : '/'
+        department = Setting[:department].present? ? Setting[:department] : 'Department Name'
+        department_url = Setting[:department_url].present? ? Setting[:department_url] : '/'
+      = link_to university, university_url
+      , 
+      = link_to department, department_url
+    %h2#header_link_2
+      :ruby
+        title = Setting[:app_title].present? ? Setting[:app_title] : 'Program Title'
+        start = Setting[:program_start_date].present? ? Setting[:program_start_date] : 'Program Start Date'
+        ending = Setting[:program_end_date].present? ? Setting[:program_end_date] : 'Program End Date'
+        str = "#{title} (#{start} - #{ending})"
+      = link_to(str, Setting[:program_url] || '/')
