--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -8,6 +8,7 @@
     .d-flex.flex-column.flex-md-row.align-items-center.p-3.px-md-4.mb-3.bg-white.border-bottom.shadow-sm
       %h3.my-0.mr-md-auto.font-weight-normal #{current_grant.program_title} | REU Manager
       %nav.my-2.my-md-0.mr-md-3
+        = link_to 'Admins', reu_program_program_admins_path, class: 'p-2 text-dark'
         = link_to 'Settings', reu_program_settings_path, class: 'p-2 text-dark'
         = link_to 'Snippets', reu_program_snippets_path, class: 'p-2 text-dark'
         = link_to 'Application Form', reu_program_application_forms_path, class:  'p-2 text-dark'
