--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,10 @@
  *= require_self
  *= require css/preload
  *= require css/vendors
- *= require css/syntaxhighlighter/shCore
+ *cc= require css/syntaxhighlighter/shCore
  *= require css/style-blue3
  *= require css/width-full
- *= require cms
+ *cc= require cms
  *cc= require bootstrap-datepicker3
  */
 
