--- a/app/views/reu_program/applicants/index.haml
+++ b/app/views/reu_program/applicants/index.haml
@@ -1,8 +1,9 @@
 .row
   .col-2
-  .col-8
+  .col-2
     %h2.float-left Applicants
-    .btn-group
+  .col-6
+    .btn-group.float-right
       %button.btn.btn-light.float-right= link_to 'Export All as CSV', reu_program_applicants_path(format: 'csv')
       %button.btn.btn-light.float-right= link_to 'Export All as PDF', reu_program_applicants_path(format: 'pdf')
   .col-2
@@ -12,15 +13,15 @@
     %table.table
       %thead
         %tr
-          %th First Name
-          %th Last Name
+          %th Name
+          %th Email
           %th State
           %th Actions
       %tbody
         - @applicants.each do |applicant|
           %tr
-            %td= applicant.field_value(*@first_name_path)
-            %td= applicant.field_value(*@last_name_path)
+            %td= "#{applicant.field_value(*@first_name_path)} #{applicant.field_value(*@last_name_path)}"
+            %td= applicant.email
             %td= applicant.state
             %td.actions
               = link_to 'Show', reu_program_applicant_path(applicant)
