--- a/app/views/applicant_data/show_recommenders.haml
+++ b/app/views/applicant_data/show_recommenders.haml
@@ -4,10 +4,9 @@
     style: "display: none;",
     data: {
       schema: @form.json_schema(section: 'recommender'),
-      ui: @form.ui_schema(section: 'recommender'),
-      data: JSON.generate(@applicant&.recommender_info&.values),
+      data: JSON.generate(@applicant&.recommender_info),
       path: recommenders_path,
-      method: :patch
+      method: 'PATCH'
     }
   }
 
