--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -5,13 +5,14 @@
     %nav.my-2.my-md-0.mr-md-3
       - class_names = 'p-2 text-dark'
       = link_to "Welcome", root_path, class: class_names
-      - if applicant_signed_in?
-        = link_to 'Application', application_path, class: class_names
-        = link_to 'Recommenders', recommenders_path, class: class_names
-        = link_to 'Status', status_path, class: class_names
-        = link_to "Logout", destroy_applicant_session_path, method: :delete, class: class_names
-      - else
-        - if started? && !expired?
-          = link_to "Apply Now", new_applicant_registration_url, class: class_names
-          = link_to "Login", new_applicant_session_url, class: class_names
-        = link_to 'Admin', reu_program_dashboard_path, class: class_names
+      - unless params[:token].present?
+        - if applicant_signed_in?
+          = link_to 'Application', application_path, class: class_names
+          = link_to 'Recommenders', recommenders_path, class: class_names
+          = link_to 'Status', status_path, class: class_names
+          = link_to "Logout", destroy_applicant_session_path, method: :delete, class: class_names
+        - else
+          - if started? && !expired?
+            = link_to "Apply Now", new_applicant_registration_url, class: class_names
+            = link_to "Login", new_applicant_session_url, class: class_names
+          = link_to 'Admin', reu_program_dashboard_path, class: class_names
