--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -3,16 +3,17 @@
     .container
       .menu.d-flex.mt-2.mb-2
         =link_to "Welcome", root_path
-        - if applicant_signed_in?
-          = link_to 'Application', application_path
-          = link_to 'Recommenders', recommenders_path
-          = link_to 'Status', status_path
-          = link_to "Logout", destroy_applicant_session_path, method: :delete
-        - else
-          - if started? && !expired?
-            = link_to "Apply Now", new_applicant_registration_url
-            = link_to "Login", new_applicant_session_url, class: 'active'
-          = link_to 'Admin', reu_program_dashboard_path
+        - unless params[:token].present?
+          - if applicant_signed_in?
+            = link_to 'Application', application_path
+            = link_to 'Recommenders', recommenders_path
+            = link_to 'Status', status_path
+            = link_to "Logout", destroy_applicant_session_path, method: :delete
+          - else
+            - if started? && !expired?
+              = link_to "Apply Now", new_applicant_registration_url
+              = link_to "Login", new_applicant_session_url, class: 'active'
+            = link_to 'Admin', reu_program_dashboard_path
       .row.mt-3
         .col
           %p
