rework the applicant side of it

--- a/app/views/applications/show_application.haml
+++ b/app/views/applications/show_application.haml
@@ -5,7 +5,7 @@
     style: "display: none;",
     data: {
       schema: @form.json_schema,
-      data: JSON.generate(@applicant.data),
+      data: JSON.generate(current_application&.data || {}),
       path: application_path,
       method: 'PATCH'
     }
