--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -22,12 +22,12 @@
   .row
     .col-md-12
       .text-center
-        - if applicant_signed_in? && current_applicant.state == 'submitted'
+        - if user_signed_in? && current_application&.state == 'submitted'
           = link_to "Check Status", applicant_status_url, class: "btn btn-lg btn-success"
-        - elsif applicant_signed_in?
-          = link_to "Finish Application", edit_applicant_registration_path, class: "btn btn-lg btn-success"
+        - elsif user_signed_in?
+          = link_to "Finish Application", edit_user_registration_path, class: "btn btn-lg btn-success"
         - else
-          = link_to "Apply Now", new_applicant_registration_path, class: "btn btn-lg btn-success"
+          = link_to "Apply Now", new_user_registration_path, class: "btn btn-lg btn-success"
 - else
   :ruby
     start_date = Setting[:application_start]&.strftime("%A, %b %d") || 'Missing Start Date'
@@ -37,7 +37,7 @@
   .row
     .col-md-12
       %h3.deadline.text-center
-        Applications will be available in #{start_data} for the Summer #{deadline} Program. Applications will be due on #{deadline&.strftime("%A, %b %d")} and Decisions sent to applicants by #{notification_date}.
+        Applications will be available in #{start_date} for the Summer #{deadline} Program. Applications will be due on #{deadline&.strftime("%A, %b %d")} and Decisions sent to applicants by #{notification_date}.
 .row.mt-4.mb-4
   .col
     %h3 Program Highlights
