--- a/app/views/grants/new.haml
+++ b/app/views/grants/new.haml
@@ -6,5 +6,5 @@
           .panel.panel-primary
             .panel-heading Step 1: Create Your Account
             .panel-body
-              = render 'form'
+              -# = render 'form', locals: { action: 'create' }
               = link_to 'Back', grants_path
