--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -1,7 +1,7 @@
 .border-bottom.shadow.navbar.main-nav
   .container.d-flex.flex-column.flex-md-row.align-items-center
     %h3.my-0.mr-md-auto.font-weight-normal
-      = link_to "#{Setting[:app_title] || 'University Name'}".html_safe, root_path, class: 'navbar-brand text-dark', id: 'ar-brand'
+      = link_to "#{'reumanager' || 'University Name'}".html_safe, root_path, class: 'navbar-brand text-dark', id: 'ar-brand'
     %nav.my-2.my-md-0.mr-md-3
       - class_names = 'p-2 text-dark'
       = link_to "Welcome", root_path, class: class_names
