--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,7 +10,7 @@
     = render 'layouts/navbar'
     .container
       -# = render 'layouts/header'
-      .row#flash
+      .row.mt-3.mb-2#flash
         .col
           - if flash[:notice]
             .alert.alert-info#notice= flash[:notice]
@@ -21,5 +21,5 @@
           - if flash[:error]
             .alert.alert-warning#error= flash[:error]
       = yield
-      
+
     = render '/layouts/footer'
