update the application form to new ui

--- a/app/assets/stylesheets/b4admin.scss
+++ b/app/assets/stylesheets/b4admin.scss
@@ -24,15 +24,15 @@
 //     line-height: 1em;
 // }
 
-.card {
-    text-align: center;
-    font-size: 2em;
-    background-color: aliceblue;
-}
+// .card {
+    // text-align: center;
+    // font-size: 2em;
+    // background-color: aliceblue;
+// }
 
-.card-body {
-    padding: 0;
-}
+// .card-body {
+    // padding: 0;
+// }
 
 
 
