--- a/app/views/reu_program/sections/_form.haml
+++ b/app/views/reu_program/sections/_form.haml
@@ -7,6 +7,7 @@
       %small Drag and Drop the fields in the outline to reorder them
     %ul.list-group.sort-fields
       - @section.fields.each do |field|
+        - next if field.marked_for_destruction?
         %li.list-group-item(data-id="#{field.id}")
           %p= "#{field.order}. #{field.title || field.default_name}"
 
@@ -53,16 +54,13 @@
             = render partial: 'reu_program/fields/boolean', locals: { f: qf }
           - if qf.object.is_a?(Fields::Select)
             = render partial: 'reu_program/fields/select', locals: { f: qf }
-          = qf.association :dependant,
-                           collection: f.object.fields,
-                           hint: 'If this field depends on another field being filled out select that field here'
           %hr
         = f.input :add_field, collection: Field::TYPES, input_html: { data: { target: 'addField' } }
       %hr
       = f.submit 'Save Section', class: 'btn btn-primary'
 
 .modal#loadingModal
-  .modal-dialog
+  .modal-dialog.modal-sm.modal-dialog-centered
     .modal-content
       .modal-body
         .spinner-border
@@ -89,8 +87,9 @@
         path = '#{update_attributes_reu_program_recommender_form_section_path(@form.id, @section.id)}'
       }
 
-      function updateForm() {
-        $('#loadingModal').modal('show')
+      function updateForm(e) {
+        console.log(e)
+        $('#loadingModal').modal({ backdrop: 'static', show: true })
         var data = new FormData(document.querySelector('.section_form'))
         $('.section_form :input, .section_form select').prop('readonly', true)
         $.ajax({
@@ -114,6 +113,7 @@
       }
 
       $addFieldInputs.on('change', updateForm)
+      $('.section_form').on('fields_removed.nested_form_fields', updateForm)
 
       var fieldSort = document.querySelector('.sort-fields')
       var sortable = new Sortable(
