--- a/app/views/reu_program/application_forms/_edit_form.haml
+++ b/app/views/reu_program/application_forms/_edit_form.haml
@@ -29,7 +29,10 @@
             .btn-group
               %button.btn.btn-outline-secondary.btn-sm(type="button" data-target="show-fields" data-section="#{section.id}") Show Fields
               = link_to 'Edit', edit_reu_program_application_form_section_path(@form, section), class: 'btn btn-outline-secondary btn-sm'
-              = link_to 'Delete', reu_program_application_form_section_path(@form, section), method: :delete, data: { confirm: 'Are you sure you want to delete this section?' }, class: 'btn btn-outline-danger btn-sm'
+              - unless section.important
+                = link_to 'Delete', reu_program_application_form_section_path(@form, section), method: :delete, data: { confirm: 'Are you sure you want to delete this section?' }, class: 'btn btn-outline-danger btn-sm'
+              - else
+                %button.btn.btn-outline-danger.btn-sm.disabled(type="button" disabled title="Important sections can't be deleted") Delete
         - display = params[:section_id].present? && params[:section_id].to_i == section.id
         %tr.field-row(style="#{display ? '' : 'display: none;' }" data-section="#{section.id}")
           %td(colspan="4")
@@ -46,8 +49,12 @@
                         = field.default_name
                       .col
                         .btn-group.float-right
-                          %button.btn.btn-secondary.btn-sm(type="button" data-path="#{edit_field_path(field, section)}" data-target="edit-btn" data-field="#{field.id}") Edit
-                          = link_to 'Remove', field_path(field, section), method: :delete, class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure you want to remove this field?' }
+                          %button.btn.btn-outline-secondary.btn-sm(type="button" data-path="#{edit_field_path(field, section)}" data-target="edit-btn" data-field="#{field.id}") Edit
+                          - unless field.important
+                            = link_to 'Delete', field_path(field, section), method: :delete, class: 'btn btn-outline-danger btn-sm', data: { confirm: 'Are you sure you want to delete this field?' }
+                          - else
+                            %button.btn.btn-outline-danger.btn-sm.disabled(type="button" disabled title="Important fields can't be deleted") Delete
+
               - content = capture do
                 %p What type of field should be added?
                 %select(data-target="field-add-select" data-path="#{fields_path(section)}")
