--- a/app/views/reu_program/settings/edit.haml
+++ b/app/views/reu_program/settings/edit.haml
@@ -1,32 +1,23 @@
-.row
-  .col-2
-  .col-8
-    %h2 Edit Setting
-    = simple_form_for [:reu_program, @setting], url: reu_program_setting_path do |f|
-      .row
-        .col
-          %p
-            %strong Name:
-            = f.object.name
-      .row
-        .col
-          %p
-            %strong Description:
-            = f.object.description
-      .row
-        .col
-          %p
-          - case f.object
-          - when Settings::DateSetting
-            .form-group.string.optional.settings_text_setting_value
-              %label.string.optional{:for => "settings_date_setting_value"} Date
-              %input#settings_text_setting_value.form-control.string.optional.datepicker{:name => "setting[value]", :type => "text"}/
-            :javascript
-              $( ".datepicker" ).flatpickr();
-          - else
-            .form-group.string.optional.settings_text_setting_value
-              %label.string.optional{:for => "settings_text_setting_value"} Value
-              %input#settings_text_setting_value.form-control.string.optional{:name => "setting[value]", :type => "text"}/
-      %hr
-      = f.submit 'Update Setting', class: 'btn btn-primary'
-  .col-2
+= simple_form_for [:reu_program, @setting], as: :setting, url: reu_program_setting_path do |f|
+  .modal-header
+    %h5 Edit #{f.object.name} Setting
+    %button.close(data-dismiss="modal")
+      %span== &times;
+  .modal-body
+    .row
+      .col
+        %p
+          %strong Description:
+          = f.object.description
+    .row
+      .col
+        %p
+        - case f.object
+        - when Settings::DateSetting
+          = f.input :value, input_html: { class: :datepicker }
+          :javascript
+            $('.datepicker').flatpickr()
+        - else
+          = f.input :value
+  .modal-footer.d-flex.justify-content-end
+    = f.submit 'Update Setting', class: 'btn btn-primary'
